--- a/static/HTML/index.html
+++ b/static/HTML/index.html
@@ -4,6 +4,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>PICK A COLOR</h1>
+    <p>Scegli un colore per cambiare lo sfondo della pagina</p>
 </body>
 </html>
