--- a/static/HTML/index.html
+++ b/static/HTML/index.html
@@ -5,5 +5,10 @@
 </head>
 <body>
     <button id="pulsante_premuto">-</button>
+    <button id="pulsante1">-</button>
+    <button id="pulsante2">-</button>
+    <button id="pulsante3">-</button>
+    <button id="pulsante4">-</button>
+    <button id="pulsante5">-</button>
 </body>
 </html>
