Pagina senza JS

--- a/static/HTML/index.html
+++ b/static/HTML/index.html
@@ -4,6 +4,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <h1>PICK A COLOR</h1>
+    <p>Scegli un colore per cambiare lo sfondo della pagina</p>
+    <button id="pulsante_premuto">-</button>
+    <button id="pulsante1">-</button>
+    <button id="pulsante2">-</button>
+    <button id="pulsante3">-</button>
+    <button id="pulsante4">-</button>
+    <button id="pulsante5">-</button>
 </body>
 </html>
