--- a/static/HTML/index.html
+++ b/static/HTML/index.html
@@ -2,15 +2,22 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="index.js"></script>
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>PICK A COLOR</h1>
-    <p>Scegli un colore per cambiare lo sfondo della pagina</p>
-    <button id="pulsante_premuto">-</button>
-    <button id="pulsante1">-</button>
-    <button id="pulsante2">-</button>
-    <button id="pulsante3">-</button>
-    <button id="pulsante4">-</button>
-    <button id="pulsante5">-</button>
+    <h1 align="center">PICK A COLOR</h1>
+    <p align="center">Scegli un colore per cambiare lo sfondo della pagina</p>
+    <div style="text-align:center;">
+    <input type="button" id="pulsante_premuto" style="background-color: red;" onclick="rosso(this);">
+    <input type="button" id="pulsante" style="background-color: cyan;" onclick="cyan(this);">
+    <input type="button" id="pulsante" style="background-color: blue;" onclick="blue(this);">
+    <input type="button" id="pulsante" style="background-color: green;" onclick="green(this);">
+    <input type="button" id="pulsante" style="background-color: purple;" onclick="purple(this);">
+    <input type="button" id="pulsante" style="background-color: yellow;" onclick="yellow(this);">
+    </div>
 </body>
 </html>
