Fine programma con input codice esadecimale

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../CSS/style.css">
-    <script type="text/javascript" src="../JS/index.js"></script>
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../color-picker/static/CSS/style.css">
+    <script type="text/javascript" src="../color-picker/static/JS/index.js"></script>
+    <link rel="stylesheet" href="../color-picker/static/CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
